code changes and latex changes after second feedback

--- a/report/pers_schedule/main.tex
+++ b/report/pers_schedule/main.tex
@@ -9,7 +9,7 @@
 \usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
 %% Useful packages
-\usepackage{amsmath}
+\usepackage[tbtags]{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
@@ -21,6 +21,8 @@
 \usepackage{tikz}
 \usepackage{titlesec}
 \usepackage{caption}
+\usepackage[shortlabels]{enumitem}
+
 \usetikzlibrary{shapes.geometric, arrows}
 
 % package to manage citations
@@ -30,7 +32,7 @@
 \tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black,text width = 5cm, fill=red!30]
 \tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=2cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
 \tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, text width = 3cm, draw=black, fill=orange!30]
-\tikzstyle{decision} = [diamond, minimum width=1cm, minimum height=1cm,text centered,text width = 2.5cm, draw=black, fill=green!30]
+\tikzstyle{decision} = [diamond, minimum width=1cm, minimum height=1cm,text centered,text width = 2.25cm, draw=black, fill=green!30]
 \tikzstyle{arrow} = [thick,->,>=stealth]
 
 \definecolor{ErasmusBlue}{RGB}{12, 32, 116}
@@ -52,7 +54,8 @@
 
 \input{mainmatter/abstract}
 \input{mainmatter/introduction}
-\input{mainmatter/framework_pers_biop_sched}
+\input{mainmatter/joint_model_framework}
+\input{mainmatter/pers_biopsy_framework}
 \input{mainmatter/pers_schedule_prias}
 \input{mainmatter/sim_study}
 
