--- a/report/pers_schedule/mainmatter/sim_study.tex
+++ b/report/pers_schedule/mainmatter/sim_study.tex
@@ -8,7 +8,7 @@ The application of personalized schedules for patients in PRIAS demonstrated tha
 \label{subsec : simulation_setup}
 In the simulation study we used a total of 100 data sets with 1000 patients each. For each of the patients in the 100 data sets, we generated the longitudinal profiles using the posterior estimates of the parameters $p(\boldsymbol{\theta} \mid \mathcal{D}^{PRIAS})$ from the joint model fitted to the PRIAS data set (Section \ref{subsec : jm_fit_prias}). The visit times for PSA measurements were the same as PRIAS schedule. i.e. Every 3 months for first 2 years and every 6 months thereafter. Similarly, while generating Gleason reclassification times for the patients, the parameters of the linear predictor in the hazard function (Equation \ref{eq : hazard_prias}) were obtained from the joint model fitted to PRIAS data set. However unlike the flexibly modeled baseline hazard in PRIAS joint model, the baseline hazard in the simulation study was modeled using a Weibull distribution. We used 10 sets of parameters $\Omega_g = \{\lambda_g, k_g\}; g = 1,... 10$ for the Weibull baseline hazard, one each for a group $g$ of 10 data sets. This was done, firstly to ensure that different data sets $\mathcal{D}^g_k; k = 1, ...10$ within a group are sampled from the same population $\mathcal{P}_g$ of patients. This way we could isolate the variation in the performance of a scheduling method. Secondly, different parameter values for the baseline hazard across the groups ensured that we tested different patient populations; those who have early progression times, as well as those who have late progression times. This is important because how late or early patients are observed to have GR, partly depends on the induction criteria of the AS program. (\textcolor{red}{\textbf{Give the values of $\Omega$ for different populations and the corresponding histograms of GR times.}})\\
 
-In a real life scenario the parameters $\boldsymbol{\theta}$ of a joint model for hazard of GR and PSA measurements will not be known in advance, and hence we do not use posterior estimates $p(\boldsymbol{\theta} \mid \mathcal{D}^{PRIAS})$ from the joint model fitted to the PRIAS data set to create personalized schedule for the simulated patients. Instead we divide each of the 100 simulated data sets into training (750 patients) and test (250 patients) parts. For ease of notation we reuse $\mathcal{D}^g_k$ as the notation for the $k^{th}$ training data set from the $g^{th}$ group. Further we simulate random and non-informative censoring times for the patients in training data set. Thus $\mathcal{D}^g_k = \{T_i, \delta_i, \boldsymbol{y}_i; i = 1,...750\}$. $T_i = \min(T_i, C_i)$ denotes the observed GR time for the $i^{th}$ patient in training data set. $\delta_i = I(T_i < C_i)$ is the event indicator, where $I(\cdot)$ is an indicator function that takes the value 1 when $T_i < C_i$ and 0 otherwise. We then fit a joint model to the training data set to obtain posterior estimates of parameters $p(\boldsymbol{\theta} \mid \mathcal{D}^g_k)$, which are required for the predictive distribution $g(T^*_j)$ of the $j^{th}$ patient from the test data set. To create the personalized schedules, we use the algorithm described in Section \ref{subsubsec : pers_sched_algorithm}.
+In a real life scenario the parameters $\boldsymbol{\theta}$ of a joint model for hazard of GR and PSA measurements will not be known in advance, and hence we do not use posterior estimates $p(\boldsymbol{\theta} \mid \mathcal{D}^{PRIAS})$ from the joint model fitted to the PRIAS data set to create personalized schedule for the simulated patients. Instead we divide each of the 100 simulated data sets into training (750 patients) and test (250 patients) parts. For ease of notation we reuse $\mathcal{D}^g_k$ as the notation for the $k^{th}$ training data set from the $g^{th}$ group. Further we simulate random and non-informative censoring times for the patients in training data set. Thus $\mathcal{D}^g_k = \{T_i, \delta_i, \boldsymbol{y}_i; i = 1,...750\}$. $T_i = \min(T_i, C_i)$ denotes the observed GR time for the $i^{th}$ patient in training data set. $\delta_i = I(T_i < C_i)$ is the event indicator, where $I(\cdot)$ is an indicator function that takes the value 1 when $T_i < C_i$ and 0 otherwise. We then fit a joint model to the training data set to obtain posterior estimates of parameters $p(\boldsymbol{\theta} \mid \mathcal{D}^g_k)$, which are required for the predictive distribution $g(T^*_j)$ of the $j^{th}$ patient from the test data set. While the predictive distribution is sufficient for scheduling biopsies based on expected time of GR, the choice of time window $\Delta t$ (Section \ref{subsubsec : dynamic_risk_definitions}) has to be made for scheduling biopsies on the basis of dynamic risk of GR. In PRIAS and in most AS programs biopsies are done at a gap of 1 to 3 years. A gap of 1 year between biopsies detects GR the earliest and at maximum detection of GR can be delayed by 1 year. Correspondingly, if we choose a time window $\Delta t$ of 1 year, then eventually the choice of $\kappa$ differentiates between people who fail .... Different $\kappa$ values maximize the binary classification measures [REFER HERE] at different time points. To this end, we first compute the binary classification measures over a fine grid of time points using the training data set, and then obtain the corresponding $\kappa$ values. For the test patients $\kappa$ values corresponding to a time point from the grid which is nearest to the last biopsy time of the patient, are used [WRITE IT MATHEMATICALLY?]. Lastly, to create the personalized schedules, we use the algorithm described in Section \ref{subsubsec : pers_sched_algorithm}.
 
 \subsection{Evaluating efficacy of scheduling methods}
 For a given population of patients $\mathcal{P}_g$, the first criteria in evaluation of efficacy of a schedule $S$ for biopsies is the number of repeat biopsies $N^S_g$ it takes before GR is detected for a patient from the population. The less $N^S_g$ the better it is for patients. In case of annual schedule, $N^S_g$ depend only on the true GR time $T^*_g$ of a patient. On the other hand, for PRIAS and personalized schedules $N^S_g$ depend on PSA measurements $\boldsymbol{y}_g$ as well as on true GR time. In either case, the marginal distribution of the number of biopsies $p(N^S_g)$ for the entire population is unknown. We estimate the mean and quantiles of this distribution from the observed number of biopsies $N^S_{g_{kj}}; j=1,...250$ for each of the 250 test patients in the $k^{th}$ data set of the $g^{th}$group (\textcolor{red}{\textbf{Should we instead take mean of means using the 10 data sets?}}). The second criteria in evaluation of efficacy of a schedule is the offset $O^S_g = T^S_g - T^*_g$, where $T^S_g > T^*_g$ is the time at which GR is detected by the scheduling mechanism $S$. Once again the marginal distribution $p(O^S_g)$ is not known. We estimate the mean and quantiles of this distribution from the observed offset $O^S_{g_{kj}}; j=1,...250$ for each of the 250 test patients in the $k^{th}$ data set of the $g^{th}$group.\\
