--- a/report/pers_schedule/mainmatter/algorithm.tex
+++ b/report/pers_schedule/mainmatter/algorithm.tex
@@ -1,43 +1,74 @@
 \begin{tikzpicture}
-\node (start) [startstop] {Enter Active Surveillance.\\ Perform a biopsy.\\Set $T^l_j=0$\\ Set $N^b_j = 0$\\Set $T^s_j = \infty$};
+\node (start) [startstop] {
+	Enter Active Surveillance.
+	\begin{enumerate}[noitemsep, leftmargin=*]
+		\item Conduct a biopsy.
+		\item Set $t=T^{nv}=0$ 
+		\item Set $u = \infty$
+	\end{enumerate}
+};
 
-\node (propTime) [process, below=1cm of start] {Update $g(T^*_j)$.\\Propose $T^p_j$.};
-\node (takePSA) [process, right=1.15cm of propTime] {Measure PSA at $T^{nv}_j$.};
+\node (takePSA) [process, below=1cm of start] {
+	\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
+		\item Measure PSA at $T^{nv}$ 
+		\item Set $s=T^{nv}$
+	\end{enumerate}
+};
 
-\node (decision1) [decision, below = 1cm of propTime] {$T^p_j < T^s_j$?};
+\node (propTime) [process, below=1cm of takePSA] {
+	\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
+		\item Set $u^{pv} = u$ 
+		\item Update $g(T^*_j)$ 
+		\item Propose $u$
+	\end{enumerate}
+};
 
-\node (decision5) [decision, left=1cm of decision1] {$T^p_j \leq T^{cv}_j$?};
+\node (decision1) [decision, below = 1.5cm of propTime] {$u < u^{pv}$?};
+\node (pro6) [process, right = 1.35cm of decision1] {Set $u = u^{pv}$};
 
-\node (pro5) [process, below=1cm of decision5] {Set $T^p_j = T^{cv}_j$};
+\node (decision5) [decision, left=1.5cm of decision1] {$u \leq s$?};
 
-\node (decision2) [decision, below=1cm of pro5] {$T^p_j - T^l_j > 1$?};
+\node (pro5) [process, below=1.5cm of decision5] {Set $u = s$};
 
-\node (pro2) [process, below=1cm of decision1] {Set $T^s_j = T^p_j$};
+\node (decision2) [decision, below=0.5cm of decision1] {$u - t > 1$?};
 
-\node (decision4) [decision, right=1cm of decision1] {$T^s_j < T^{nv}_j$?};
+\node (decision4) [decision, right=1.5cm of decision2] {$u < T^{nv}$?};
 
-\node (pro3) [process, right=1cm of decision2] {Perform Biopsy at $T^l_j + 1$.\\ Set $N^b_j = N^b_j + 1$};
+\node (pro3) [process, below=1cm of decision2] {
+	\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
+		\item Conduct Biopsy at $t + 1$ 
+		\item Set $t = t + 1$
+	\end{enumerate}
+};
 
-\node (pro4) [process, below=1cm of decision4] {Perform Biopsy at $T^s_j$.\\ Set $N^b_j = N^b_j + 1$};
+\node (pro4) [process, below=1cm of decision4] {
+	\begin{enumerate}[noitemsep,topsep=0pt, leftmargin=*]
+		\item Conduct Biopsy at $u$
+		\item Set $t = u$
+	\end{enumerate}
+};
 
-\node (decision3) [decision, below=1cm of pro3] {Is Gleason score greater than 6?};
+\node (decision3) [decision, below=1cm of pro3] {Gleason > 6?};
+\node (pro7) [process, left=1cm of decision3] {Set $u=\infty$};
 
 \node (stop) [startstop, below = 1cm of decision3] {Remove patient from AS};
 
-\draw [arrow] (start) -- (propTime);
+\draw [arrow] (start) -- (takePSA);
+\draw [arrow] (takePSA) -- (propTime);
 \draw [arrow] (propTime) -- (decision1);
 \draw [arrow] (decision1) -- node[anchor=south] {Yes} (decision5);
 \draw [arrow] (decision5) -- node[anchor=east] {Yes} (pro5);
 \draw [arrow] (pro5) -- (decision2);
-\draw [arrow] (decision1) -- node[anchor=south] {No} (decision4);
-\draw [arrow] (decision4) -- node[anchor=east] {No} (takePSA);
-\draw [arrow] (takePSA) -- (propTime);
-\draw [arrow] (decision2) -- node[anchor=east] {Yes} (pro2);
-\draw [arrow] (pro2) -- (decision4);
-\draw [arrow] (decision2) -- node[anchor=south] {No} (pro3);
+\draw [arrow] (decision1) -- node[anchor=south] {No} (pro6);
+\draw [arrow] (decision5) -- node[anchor=south] {No} (decision2);
+\draw [arrow] (pro6) -- (decision4);
+\draw [arrow] (decision4.east) |- ([xshift=0.35cm, yshift=-4cm]pro6.north east) |- node[anchor=south] {No} (takePSA);
+\draw [arrow] (decision2) -- node[anchor=south] {Yes} (decision4);
+\draw [arrow] (decision2) -- node[anchor=east] {No} (pro3);
 \draw [arrow] (pro3) -- (decision3);
 \draw [arrow] (pro4) |- (decision3);
 \draw [arrow] (decision3) -- node[anchor=east] {Yes} (stop);
 \draw [arrow] (decision4) -- node[anchor=east] {Yes} (pro4);
-\draw [arrow] (decision3.west)|- ([xshift=-1.5cm, yshift=-4.5cm]decision2.north west) |- node[anchor=south]{No} (propTime);
+ \draw [arrow] (decision3) -- node[anchor=south]{No} (pro7);
+\draw [arrow] (pro7.west)|- ([xshift=-0.35cm, yshift=-7cm]pro5.north west) |- (propTime);
 \end{tikzpicture}
